# AICITY2025_track2

./: README.md  pyproject.toml
qa/: infer_qa.py  requirements.txt
qa/examples/: infer_qa.sh  sft.sh
